tests/multiplatform_ambient_supports_platform/desktop-only/use-mobile-from-desktop.js
import {foo} from 'mobile' // error
